# clone_and_translate

./: README.md  main.py  pyproject.toml
pages/: index.html
pages/about/: careers.html  index.html  privacy-policy.html
pages/collection/: ivy-league-moocs.html  sustainability-online-courses.html  top-free-online-courses.html
pages/collections/: index.html
pages/contact/: index.html
pages/course/: edx-biochemistry-biomolecules-methods-and-mechanisms-12585.html  edx-introduccion-a-la-genetica-y-la-evolucion-8591.html  edx-the-future-of-work-preparing-for-disruption-13702.html  edx-the-science-of-everyday-thinking-1332.html  mindfulness-life-9078.html  multilingual-practices-8096.html  programming1-385.html  songwriting-lyrics-523.html  successfulnegotiation-2460.html
pages/help/: index.html  moocs.html
pages/institution/: amazon.html  british-council.html  google.html  ibm.html  linuxfoundation.html  microsoft.html  salesforce.html  smithsonian.html  united-nations.html
pages/institutions/: index.html
pages/provider/: coursera.html  edx.html  futurelearn.html  linkedin-learning.html  skillshare.html  swayam.html  udacity.html  udemy.html
pages/providers/: index.html
pages/rankings/: index.html
pages/report/: 2022-year-in-review.html  best-bookkeeping-courses.html  best-crystal-programming-courses.html  best-css-layout-courses.html  best-digital-art-courses.html  best-elm-courses.html  best-free-online-courses-2022.html  class-central-ddos-attack.html  coursera-economics.html  coursera-free-online-courses.html  feed.html  (+24 more)
utils/: scraping.py
(+36 files in other folders)
