[tool.poetry]
name = "turkish-challenge"
version = "0.1.0"
description = ""
authors = ["Vinicius da Fonseca <viniciusdafonseca2000@gmail.com>"]
readme = "README.md"
packages = [{include = "turkish_challenge"}]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
httpx = {extras = ["http2"], version = "^0.23.1"}
englisttohindi = "^4.1.0"
asyncio = "^3.4.3"
aiofiles = "^23.1.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
